# VoxArena

./: .gitignore  CLAUDE.md  INSTALLATION.md  LICENSE  PRD.md  README.md  docker-compose.yml  render.yaml
.claude/: api-contracts.md  lead-agent-prompt.md  run-state.json
.claude/scripts/: run-tests.bat  security-scan.bat  setup-test-env.bat
agent/: .env.example  Dockerfile  README.md  agent.py  pyproject.toml  resemble_tts.py  usage_logger.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  verify_ws6a.py
backend/alembic/: env.py
backend/alembic/versions/: 20251223_191010_initial_schema.py  20260224_002143_add_agent_phone_number.py  20260225_120000_add_cost_tracking.py  20260225_120000_add_outbound_call_fields.py  20260225_120000_add_transfer_columns.py
backend/app/: config.py  cost_rates.py  main.py  models.py  schemas.py
backend/app/routers/: agents.py  calls.py  costs.py  livekit.py  resemble.py  sessions.py  telephony.py  usage.py
backend/app/services/: call_analysis.py  call_transfer.py  cost_aggregation.py
docs/: docs.json  introduction.mdx  local-development.mdx  openapi.json  quickstart.mdx
docs/architecture/: database.mdx  overview.mdx  voice-pipeline.mdx
docs/configuration/: docker.mdx  environment-variables.mdx  livekit.mdx  telephony.mdx
docs/features/: agents.mdx  call-intelligence.mdx  call-transfer.mdx  cost-tracking.mdx  function-calling.mdx  telephony.mdx  voice-sessions.mdx
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+34 files in other folders)
